<resources>
    <string name="app_name">InsectID.AI</string>
    <string name="insect_identification">Insects of India</string>
    <string name="select_image">Select Image</string>
    <string name="predicting">Analyzing…</string>
    <string name="use_model">Identify a</string>
    <string name="developed_by_rakesh_malik_2025">Developed by Rakesh Malik ©2025</string>
    <string name="version">Version 1.0.0 alpha</string>
    <string name="possible_matches">Possible matches:</string>
    <string name="no_match_found">No match found</string>
    <string name="image_to_be_classified">Image to be classified</string>
    <string name="fetching_metadata">Fetching metadata…</string>
    <string name="update_model">Update/Download model</string>
    <string name="please_wait">Please wait…</string>
    <string name="download_failed">Download %1$s failed!</string>
    <string name="download_connection_aborted">Download %1$s failed! \nPlease restart the download and do not minimize or close the app or lock the screen</string>
</resources>